[package]
name = "mytest"
version = "0.1.0"
authors = ["Oleg Prikhodko <oldmpr@rambler.ru>"]

[dependencies]

glium = "0.16.0"
glium_text = "0.11.0"
image = "0.12.0"
glutin = "0.7.1"
cgmath = "0.9.1"
rusttype = "0.2"
arrayvec = "^0.3.13"
unicode-normalization = "^0.1.2"


[profile.release]
opt-level = 3